tests/dataset/tpc-ds/compiler/java/q8.error
javac error: exit status 1
/tmp/TestJavaCompiler_TPCDSQueriesq84211628332/001/Q8.java:187: error: cannot find symbol
    reverse(substr("zip", 0, 2));
            ^
  symbol:   method substr(String,int,int)
  location: class Q8
/tmp/TestJavaCompiler_TPCDSQueriesq84211628332/001/Q8.java:198: error: cannot find symbol
                    if (!(Objects.equals(substr(s.s_zip, 0, 2), substr(ca.ca_zip, 0, 2)))) continue;
                                         ^
  symbol: method substr(String,int,int)
/tmp/TestJavaCompiler_TPCDSQueriesq84211628332/001/Q8.java:198: error: cannot find symbol
                    if (!(Objects.equals(substr(s.s_zip, 0, 2), substr(ca.ca_zip, 0, 2)))) continue;
                                                                ^
  symbol: method substr(String,int,int)
/tmp/TestJavaCompiler_TPCDSQueriesq84211628332/001/Q8.java:201: error: cannot find symbol
                        if (!(zip_list.contains(substr(ca.ca_zip, 0, 5)))) continue;
                                                ^
  symbol: method substr(String,int,int)
4 errors
